syntax = "proto3";

package protocol;

message Arrear {
    int32 ID = 1;
    int32 ReaderID = 2;
    int32 BookID = 3;
    string Start = 4;
    string End = 5;
}

message PagingArrears {
    int32 ID = 1;
    int32 Size = 2;
    int32 Page = 3;
}

message NewArrear {
    int32 ReaderID = 1;
    int32 BookID = 2;
}

message SomeArrearsID{
    int32 ID = 1;
}

message NothingArrear {
    bool Dummy = 1;
}
message AuthRequest {
    string AppKey = 1;
    string AppSecret = 2;
}

message SomeString {
    string String = 1;
}

service Arrears {
    rpc GetPagedReadersArrears (PagingArrears) returns (stream Arrear) {}
    rpc RegisterNewArrear(NewArrear) returns (Arrear) {}
    rpc GetArrearByID(SomeArrearsID) returns (Arrear) {}
    rpc DeleteArrearByID(SomeArrearsID) returns (NothingArrear) {}
    rpc Auth(AuthRequest) returns (SomeString) {}
}